[gd_scene load_steps=51 format=2]

[ext_resource path="res://player/RobotPlayer.gd" type="Script" id=1]
[ext_resource path="res://art/robotfree/png/Idle (1).png" type="Texture" id=2]
[ext_resource path="res://art/robotfree/png/Idle (2).png" type="Texture" id=3]
[ext_resource path="res://art/robotfree/png/Idle (3).png" type="Texture" id=4]
[ext_resource path="res://art/robotfree/png/Idle (4).png" type="Texture" id=5]
[ext_resource path="res://art/robotfree/png/Idle (5).png" type="Texture" id=6]
[ext_resource path="res://art/robotfree/png/Idle (6).png" type="Texture" id=7]
[ext_resource path="res://art/robotfree/png/Idle (7).png" type="Texture" id=8]
[ext_resource path="res://art/robotfree/png/Idle (8).png" type="Texture" id=9]
[ext_resource path="res://art/robotfree/png/Idle (9).png" type="Texture" id=10]
[ext_resource path="res://art/robotfree/png/Idle (10).png" type="Texture" id=11]
[ext_resource path="res://art/robotfree/png/JumpMelee (1).png" type="Texture" id=12]
[ext_resource path="res://art/robotfree/png/JumpMelee (2).png" type="Texture" id=13]
[ext_resource path="res://art/robotfree/png/JumpMelee (3).png" type="Texture" id=14]
[ext_resource path="res://art/robotfree/png/JumpMelee (4).png" type="Texture" id=15]
[ext_resource path="res://art/robotfree/png/JumpMelee (5).png" type="Texture" id=16]
[ext_resource path="res://art/robotfree/png/JumpMelee (6).png" type="Texture" id=17]
[ext_resource path="res://art/robotfree/png/JumpMelee (7).png" type="Texture" id=18]
[ext_resource path="res://art/robotfree/png/JumpMelee (8).png" type="Texture" id=19]
[ext_resource path="res://art/robotfree/png/Run (1).png" type="Texture" id=20]
[ext_resource path="res://art/robotfree/png/Run (2).png" type="Texture" id=21]
[ext_resource path="res://art/robotfree/png/Run (3).png" type="Texture" id=22]
[ext_resource path="res://art/robotfree/png/Run (4).png" type="Texture" id=23]
[ext_resource path="res://art/robotfree/png/Run (5).png" type="Texture" id=24]
[ext_resource path="res://art/robotfree/png/Run (6).png" type="Texture" id=25]
[ext_resource path="res://art/robotfree/png/Run (7).png" type="Texture" id=26]
[ext_resource path="res://art/robotfree/png/Run (8).png" type="Texture" id=27]
[ext_resource path="res://art/robotfree/png/JumpShoot (1).png" type="Texture" id=28]
[ext_resource path="res://art/robotfree/png/JumpShoot (2).png" type="Texture" id=29]
[ext_resource path="res://art/robotfree/png/JumpShoot (3).png" type="Texture" id=30]
[ext_resource path="res://art/robotfree/png/JumpShoot (4).png" type="Texture" id=31]
[ext_resource path="res://art/robotfree/png/JumpShoot (5).png" type="Texture" id=32]
[ext_resource path="res://art/robotfree/png/Jump (3).png" type="Texture" id=33]
[ext_resource path="res://art/robotfree/png/Jump (4).png" type="Texture" id=34]
[ext_resource path="res://art/robotfree/png/Jump (5).png" type="Texture" id=35]
[ext_resource path="res://art/robotfree/png/Jump (6).png" type="Texture" id=36]
[ext_resource path="res://art/robotfree/png/Dead (1).png" type="Texture" id=37]
[ext_resource path="res://art/robotfree/png/Dead (2).png" type="Texture" id=38]
[ext_resource path="res://art/robotfree/png/Dead (3).png" type="Texture" id=39]
[ext_resource path="res://art/robotfree/png/Dead (4).png" type="Texture" id=40]
[ext_resource path="res://art/robotfree/png/Dead (5).png" type="Texture" id=41]
[ext_resource path="res://art/robotfree/png/Dead (6).png" type="Texture" id=42]
[ext_resource path="res://art/robotfree/png/Dead (7).png" type="Texture" id=43]
[ext_resource path="res://art/robotfree/png/Dead (8).png" type="Texture" id=44]
[ext_resource path="res://art/robotfree/png/Dead (9).png" type="Texture" id=45]
[ext_resource path="res://art/robotfree/png/Dead (10).png" type="Texture" id=46]

[sub_resource type="CapsuleShape2D" id=1]
radius = 27.0
height = 40.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.0
height = 39.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 20.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "jumpMelee",
"speed": 20.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": true,
"name": "run",
"speed": 24.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "jumpShoot",
"speed": 20.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": true,
"name": "jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ) ],
"loop": false,
"name": "dead",
"speed": 20.0
} ]

[sub_resource type="Animation" id=4]
resource_name = "DeathPhysCollision"
tracks/0/type = "value"
tracks/0/path = NodePath("PhysCollision:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 10, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PhysCollision:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}

[node name="RobotPlayer" type="KinematicBody2D"]
position = Vector2( 586.646, 471.908 )
script = ExtResource( 1 )

[node name="Sense" type="Area2D" parent="." groups=[
"player",
]]
position = Vector2( -586.646, -471.908 )

[node name="SenseCollision" type="CollisionShape2D" parent="Sense"]
visible = false
position = Vector2( 586.646, 471.908 )
shape = SubResource( 1 )

[node name="PhysCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="CameraCenter" type="Position2D" parent="."]
position = Vector2( 700, 0 )

[node name="Camera2D" type="Camera2D" parent="CameraCenter"]
current = true
smoothing_enabled = true
editor_draw_drag_margin = true

[node name="RobotAnimations" type="AnimatedSprite" parent="."]
position = Vector2( 4.96851, -4.21106 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 3 )
animation = "idle"
frame = 6
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DeathPhysCollision = SubResource( 4 )

[connection signal="area_entered" from="Sense" to="." method="_on_Sense_area_entered"]
